--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "next": "13.0.0",
@@ -15,6 +16,7 @@
   "devDependencies": {
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
+    "cypress": "^10.11.0",
     "typescript": "4.8.4"
   }
 }
