--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "code-coverage": "npx nyc report --reporter=text-summary"
   },
   "dependencies": {
+    "i18next": "^22.0.4",
     "next": "13.0.0",
+    "next-i18next": "^12.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-i18next": "^12.0.0"
   },
   "devDependencies": {
     "@cypress/code-coverage": "^3.10.0",
