--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "code-coverage": "npx nyc report --reporter=text-summary"
   },
   "dependencies": {
+    "framer-motion": "^7.6.4",
     "i18next": "^22.0.4",
     "next": "13.0.0",
     "next-i18next": "^12.1.0",
