--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next-i18next": "^12.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-i18next": "^12.0.0"
+    "react-i18next": "^12.0.0",
+    "react-tsparticles": "^2.5.1",
+    "tsparticles": "^2.5.1"
   },
   "devDependencies": {
     "@cypress/code-coverage": "^3.10.0",
